--- a/styles/style.css
+++ b/styles/style.css
@@ -17,11 +17,11 @@ Common/root styles
 body{
    margin: 0;
    padding: 0;
-   background: wheat;
+   background: rgb(243, 219, 175);
 }
 h2{
     padding-left: 5%;
-    color: red;
+    color: rgb(255, 0, 0);
     font-size: xx-large;
 }
 section{
@@ -48,7 +48,7 @@ h4{word-spacing: 0;}
 }
 /* scrollbar design */
 ::-webkit-scrollbar{width: 10px;}
-::-webkit-scrollbar-track{background: bisque;}
+::-webkit-scrollbar-track{background: rgb(243, 218, 187);}
 ::-webkit-scrollbar-thumb{background: #Fa3a5a;}
 ::-webkit-scrollbar-track:hover{border:1px solid #Fa3a5a;}
 /* source: https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp */
@@ -62,7 +62,7 @@ home.html
 #navbar{
     margin: 0;
     padding: 0;
-    background:bisque;
+    background:rgb(243, 218, 187);
     display: flex;
     justify-content: space-between;
     /* fixed menu from w3schools  */
@@ -90,10 +90,10 @@ home.html
     color: #Fa3a5a;
 }
 #compName > a:hover{
-    color: blueviolet;
+    color: rgb(140, 44, 230);
 }
 #compName > sub{
-    color: black;
+    color: rgb(0, 0, 0);
     font-size: 1rem;
 }
 
@@ -184,7 +184,7 @@ home.html
 }
 /* the photos used as example in the speciality section */
 .example{
-    border:5px outset crimson;
+    border:5px outset rgb(212, 21, 59);
     border-radius: 20%;
     width: 30%;
     height: 50%;
@@ -207,7 +207,7 @@ home.html
 .staffSection > img{
     width: 20vw;
     height: auto;
-    border: 5px solid black;
+    border: 5px solid rgb(0, 0, 0);
     border-radius: 12px;
 
 }
@@ -301,11 +301,11 @@ home.html
     word-spacing: 0.1rem;
     letter-spacing: 0.1rem;
     font-family: monospace;
-    color: purple;
+    color: rgb(58, 1, 58);
     text-align: right;
 }
 #author:hover{
-    color: green;
+    color: rgb(0, 126, 0);
 }
 /* ------------------------------------------------------------------------------------------------ */
 /*
@@ -367,7 +367,7 @@ about.html
 #photo {
     width: 15vw;
     height: auto;
-    border: 5px solid blueviolet;
+    border: 5px solid rgb(141, 41, 235);
 }
 #photoBox{border:none;}
 dl{
