--- a/styles/style.css
+++ b/styles/style.css
@@ -170,7 +170,7 @@ home.html
 /* Speciality section */
 #speciality{
     padding: 20vh 0;
-    background-color: rgb(199, 250, 152);
+    background-color: rgb(81, 226, 190);
     
 }
 #speciality > article{
@@ -184,7 +184,7 @@ home.html
 }
 /* the photos used as example in the speciality section */
 .example{
-    border:5px outset rgb(212, 21, 59);
+    border:5px outset #fa3a5a;
     border-radius: 20%;
     width: 30%;
     height: 50%;
@@ -218,7 +218,7 @@ home.html
 }
 /* clients section */
 #clients{
-    background-color: rgb(199, 250, 152);
+    background-color: rgb(81, 226, 190);
     padding: 20vh 0;
 }
 #clients h3{
@@ -281,7 +281,7 @@ home.html
 }
 .footlink{
     font-size: 0.8rem;
-    color: blue;
+    color: rgb(62, 62, 202);
     word-spacing: 0;
     padding: 5px;
 }
@@ -358,6 +358,10 @@ form{padding: 10vh 0;}
 .checkSkills{
     padding:0 10px;
     word-spacing: normal;
+}
+#gender{
+    border: 1px solid gray;
+    margin-right: 55%;
 }
 
 /* ------------------------------------------------------------------------------------------------ */
@@ -495,4 +499,10 @@ td{
     .checkSkills{
         padding: 0;
     }
+    #gender{
+        border: 0;
+        width: 100%;
+        font-size: 1rem;
+    }
+    #gender legend{ font-size: 0.7rem;}
 }
